# hypercam2-for-linux

./: CMakeLists.txt  LICENSE  README.md  build.sh  include.h  main.c
